--- a/src/app/components/iseeq-button/iseeq-button.component.css
+++ b/src/app/components/iseeq-button/iseeq-button.component.css
@@ -5,12 +5,16 @@
 }
 
 .s{
-
+    font-weight: 100;
+    padding:5px 10px 4px 10px;
+    font-family: 'bitbold2';
+    font-size: 10px;
 }
 
 .m{
     padding:15px 30px 10px 30px;
     font-size: 13px;
+    
 }
 
 .l{
