services final team final about 0.1

--- a/src/app/ContetntFeature/components/iseeq-about/iseeq-about.component.html
+++ b/src/app/ContetntFeature/components/iseeq-about/iseeq-about.component.html
@@ -1,4 +1,16 @@
 <div class="site-base">
     <h2 class="site-title">ABOUT</h2>
+
+<app-iseeq-projektor></app-iseeq-projektor>
+
+
+
+
+
+
+
+
+
+
 </div>
 
