--- a/src/app/ContetntFeature/components/iseeq-services/iseeq-services.component.html
+++ b/src/app/ContetntFeature/components/iseeq-services/iseeq-services.component.html
@@ -10,6 +10,7 @@
                     <div class="dekoration" style="position:absolute;top:15px;right:15px;"></div>
                     <div class="dekoration" style="position:absolute;bottom:15px;left:15px;"></div>
                     <div class="dekoration" style="position:absolute;bottom:15px;right:15px;"></div>
+                    <img src="/assets/pictures/services/monkey.png" alt="monkey picture">
                 </div>
                 
                     <p class="services-collum-title">We know<br><span class="spans">THE DOMAIN</span></p>
@@ -32,6 +33,7 @@
                             <div class="dekoration" style="position:absolute;top:15px;right:15px;"></div>
                             <div class="dekoration" style="position:absolute;bottom:15px;left:15px;"></div>
                             <div class="dekoration" style="position:absolute;bottom:15px;right:15px;"></div>
+                            <img src="/assets/pictures/services/buildings.png" style="width:110px;height:175px" alt="monkey picture">
                     </div>
                     
                         <p class="services-collum-title">We know<br><span class="spans">THE MARKET</span></p>
@@ -54,6 +56,7 @@
                         <div class="dekoration" style="position:absolute;top:15px;right:15px;"></div>
                         <div class="dekoration" style="position:absolute;bottom:15px;left:15px;"></div>
                         <div class="dekoration" style="position:absolute;bottom:15px;right:15px;"></div>
+                        <img src="/assets/pictures/services/man.png" alt="monkey picture">
                     </div>
                         
                         <p class="services-collum-title">We know<br><span class="spans">THE PEOPLE</span></p>
