about es projektor component 0.2

--- a/src/app/ContetntFeature/components/iseeq-about/iseeq-about.component.html
+++ b/src/app/ContetntFeature/components/iseeq-about/iseeq-about.component.html
@@ -1,7 +1,17 @@
 <div class="site-base">
     <h2 class="site-title">ABOUT</h2>
 
-<app-iseeq-projektor></app-iseeq-projektor>
+<app-iseeq-projektor>
+        <div iseeqProjektor>Üres</div>
+        <div iseeqProjektor></div>
+        <div iseeqProjektor></div>
+        <div iseeqProjektor></div>
+        <div iseeqProjektor></div>
+        <div iseeqProjektor></div>
+        <div iseeqProjektor></div>
+        <div iseeqProjektor></div>
+        <div iseeqProjektor>Üres</div>
+</app-iseeq-projektor>
 
 
 
