--- a/src/app/components/iseeq-projektor/iseeq-projektor.component.html
+++ b/src/app/components/iseeq-projektor/iseeq-projektor.component.html
@@ -1,11 +1,11 @@
-<div #aboutScrollable class="about-scrollable">
+<div #projektorWindow class="projektor-window" draggable="false" ondragstart="return false;">
 
-  <div class="items"></div>
-  <div class="items"></div>
-  <div class="items"></div>
-  <div class="items"></div>
-  <div class="items"></div>
-  <div class="items"></div>
+<div #aboutScrollable class="about-scrollable"draggable="false" ondragstart="return false;">
+
+
+    <ng-content></ng-content>
   
+
+</div>
 
 </div>
