--- a/src/app/components/iseeq-projektor/iseeq-projektor.component.css
+++ b/src/app/components/iseeq-projektor/iseeq-projektor.component.css
@@ -1,16 +1,16 @@
+.projektor-window{
+    position:relative;
+    padding: 5px; 
+    border:2px solid green;
+    width:50%;
+    overflow: hidden; 
+}
 .about-scrollable{
     display:flex;
     position: relative;
     flex-wrap: nowrap;
     border:2px solid red;
-    overflow-x:visible
+    overflow-x:visible;
+    cursor:grab;
 }
 
-.items{
-    height:400px;
-    min-width:250px;
-    margin:20px;
-    background-color:blue;
-
-
-}
