--- a/src/app/ContetntFeature/components/iseeq-about/iseeq-about.component.css
+++ b/src/app/ContetntFeature/components/iseeq-about/iseeq-about.component.css
@@ -1,7 +1,8 @@
 .projectable{
     height:400px;
-    min-width:250px;
     margin:20px;
     background-color:blue;
 }
-
+.in-center{}
+    
+div{color:white}
