--- a/src/app/ContetntFeature/components/iseeq-about/iseeq-about.component.html
+++ b/src/app/ContetntFeature/components/iseeq-about/iseeq-about.component.html
@@ -1,4 +1,4 @@
-<div class="site-base">
+<div class="site-base2">
     <h2 class="site-title">ABOUT</h2>
 
 <app-iseeq-projektor [membersCentered]=true [projektorWidth]="'100%'" [startPosition]=5  [statusBar]=true>
@@ -13,7 +13,7 @@
         <div iseeqProjektor  proWidth="200">8</div>
 </app-iseeq-projektor>
 
-
+<app-iseeq-flag></app-iseeq-flag>
 
 
 
