--- a/src/app/ContetntFeature/components/iseeq-about/iseeq-flag/iseeq-flag.component.html
+++ b/src/app/ContetntFeature/components/iseeq-about/iseeq-flag/iseeq-flag.component.html
@@ -4,8 +4,9 @@
   </div>
 
   <div class="flag-text-cont">
-      <ul>
-        <li><div class="list-decorator"></div>fdkjhkjhkd</li>
+    <h1>2014</h1>
+      <ul> 
+        <li><div class="list-decorator"></div><div class="test">fdkjh kjhkd fdgf gfd fdgsdfgsd fgdsfg dfgsdfgsdf gdfgsdg dfsgdfg fdg s dfg d f ssgfdg</div></li>
         <li><div class="list-decorator"></div>fdkjhkjhkd</li>
         <li><div class="list-decorator"></div>fdkjhkjhkd</li>
         <li><div class="list-decorator"></div>fdkjhkjhkd</li>
