--- a/src/app/ContetntFeature/components/iseeq-about/iseeq-flag/iseeq-flag.component.css
+++ b/src/app/ContetntFeature/components/iseeq-about/iseeq-flag/iseeq-flag.component.css
@@ -4,7 +4,7 @@ h1{
 
 .flag-container{
     display:flex;
-    width:300px;
+    width:350px;
     color:black;
     border:1px solid black;
 }
@@ -15,23 +15,29 @@ h1{
 }
 
 .flag-text-con{
-
+   
 }
 ul{
     list-style-type:none;
     position:relative;
     top:40px;
+    padding:0px;
     
 }
+li{display: flex}
 
 .list-decorator{
-    width:7px;
+    min-width:7px;
     height: 7px;
     background-color: lightblue;
     box-shadow: 1px 2px black;
     display:inline-block;
-    margin-bottom: 3px;
+    margin-top:5px;
     margin-right:5px;
+}
+
+.test{
+    display: inline-block;
 }
 
 .flag{
