--- a/src/app/ContetntFeature/components/iseeq-about/iseeq-about.component.html
+++ b/src/app/ContetntFeature/components/iseeq-about/iseeq-about.component.html
@@ -1,16 +1,16 @@
 <div class="site-base">
     <h2 class="site-title">ABOUT</h2>
 
-<app-iseeq-projektor [membersCentered]=true [projektorWidth]="'100%'" [startPosition]=5  [statusBar]=true>
-        <div iseeqProjektor  proWidth="400"(iamincenter)="elementInCenter($event)">0</div>
-        <div iseeqProjektor  proWidth="200">1</div>
+<app-iseeq-projektor [membersCentered]=true [projektorWidth]="'100%'" [startPosition]=5  [statusBar]=true [startInCenter]=true>
+        <div iseeqProjektor  proWidth="300"(iamincenter)="elementInCenter($event)">0</div>
+        <div iseeqProjektor  proWidth="300">1</div>
         <div iseeqProjektor  proWidth="300">2</div>
-        <div iseeqProjektor  proWidth="200">3</div>
-        <div iseeqProjektor  proWidth="200">4</div>
-        <div iseeqProjektor  proWidth="500" (iamincenter)="elementInCenter($event)">5</div>
-        <div iseeqProjektor  proWidth="200">6</div>
+        <div iseeqProjektor  proWidth="300">3</div>
+        <div iseeqProjektor  proWidth="300">4</div>
+        <div iseeqProjektor  proWidth="300" (iamincenter)="elementInCenter($event)">5</div>
+        <div iseeqProjektor  proWidth="300">6</div>
         <div iseeqProjektor  proWidth="300">7</div>
-        <div iseeqProjektor  proWidth="200">8</div>
+        <div iseeqProjektor  proWidth="300">8</div>
 </app-iseeq-projektor>
 
 
