--- a/src/app/components/iseeq-menu/iseeq-menu.component.css
+++ b/src/app/components/iseeq-menu/iseeq-menu.component.css
@@ -58,7 +58,7 @@ img{
     text-align:right;
     padding-right: 2%;
 }
-mat-icon{
+.icon{
     font-size: 40px;
     width:40px;
     height: 40px;
