--- a/src/app/components/iseeq-menu/iseeq-menu.component.html
+++ b/src/app/components/iseeq-menu/iseeq-menu.component.html
@@ -23,7 +23,8 @@
         </div>
 
         <div class="menu-control-s">
-            <mat-icon (click)="openCloseSMenu()">{{sMenuIcon}}</mat-icon>
+           <!-- <mat-icon (click)="openCloseSMenu()">{{sMenuIcon}}</mat-icon>-->
+           <img (click)="openCloseSMenu()" [src]=sMenuIcon alt="open/close menu"> 
         </div>
             
     </div>
