--- a/src/app/components/iseeq-projektor/iseeq-projektor.component.css
+++ b/src/app/components/iseeq-projektor/iseeq-projektor.component.css
@@ -1,7 +1,8 @@
 .projektor-window{
     position:relative;
     border:2px solid green;
-    overflow: hidden; 
+    overflow: hidden;
+    transition: all 0.2s ease;
 }
 .about-scrollable{
     display:flex;
@@ -10,17 +11,31 @@
     border:2px solid red;
     overflow-x:visible;
     cursor:grab;
+    transition: all 0.2s ease; 
 }
 .status-bar{
     position: relative;
     display: flex;
     justify-content: center;
+    transition: all 0.2s ease; 
 }
 .status-bar-item{
     width:10px;
     height: 10px;
     margin:5px;
-   /* background-color: grey;*/
-    
+    transition: all 0.2s ease;  
 }
 
+.step-button{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;    
+}
+
+.step-button>img{
+    margin-left:20%;
+    margin-right:20%;
+    height:30px;
+    width:30px;
+}
