--- a/src/app/components/iseeq-projektor/iseeq-projektor.component.html
+++ b/src/app/components/iseeq-projektor/iseeq-projektor.component.html
@@ -1,13 +1,17 @@
 <div #projektorWindow class="projektor-window" draggable="false" ondragstart="return false;" 
     (mousedown)="onMouseDown($event)" (mouseup)="onMouseUp()">
     <div #aboutScrollable class="about-scrollable"draggable="false" ondragstart="return false;" (touchend)="onToucheEnd()">
+        <div #frontWhiteSpace style="border:5px solid yellow;"></div>
         <ng-content></ng-content>
+        <div #endWhiteSpace style="border:2px solid yellow;"></div>
     </div>
 </div>
 
 <div *ngIf="statusBar" class="status-bar" >
-    <div *ngFor="let member of members; let i = index" class="status-bar-item" [style.background-color]="!isMemberActive[i] ? 'gray':'red'" ></div>
+    <div *ngFor="let member of members; let i = index" class="status-bar-item" [style.background-color]="!isMemberActive[i] ? 'lightgray':'#45d48b'" ></div>
 </div>
 
-<p (click)="stepNavigationScroll(1)" style="color:black;font-size:30px;margin-left:50px;"> elore </p>
-<p (click)="stepNavigationScroll(-1)" style="color:black;font-size:30px;margin-left:50px;"> vissza </p>
+<div class="step-button">
+    <img src="/assets/pictures/ikon/github_card.svg" (click)="stepNavigationScroll(-1)" alt="stepp -"> 
+    <img src="/assets/pictures/ikon/github_card.svg" (click)="stepNavigationScroll(1)" alt="stepp +" >
+</div>
