--- a/src/app/ContetntFeature/components/iseeq-about/iseeq-about.component.html
+++ b/src/app/ContetntFeature/components/iseeq-about/iseeq-about.component.html
@@ -1,7 +1,7 @@
-<div class="site-base2">
+<div class="site-base2" style=background-color:gray>
     <h2 class="site-title">ABOUT</h2>
 
-<app-iseeq-projektor [membersCentered]=true [projektorWidth]="'100%'" [startPosition]=5  [statusBar]=true [startInCenter]=true>
+<app-iseeq-projektor [membersCentered]=true [projektorWidth]="'100%'" [statusBar]=false [startInCenter]=true [startPosition]=5>
         <div iseeqProjektor  proWidth="300"(iamincenter)="elementInCenter($event)">0</div>
         <div iseeqProjektor  proWidth="300">1</div>
         <div iseeqProjektor  proWidth="300">2</div>
@@ -13,7 +13,7 @@
         <div iseeqProjektor  proWidth="300">8</div>
 </app-iseeq-projektor>
 
-<app-iseeq-flag></app-iseeq-flag>
+<app-iseeq-flag [active]=activeFlag [texts]=flagTexts></app-iseeq-flag>
 
 
 
