--- a/src/app/components/iseeq-projektor/iseeq-projektor.component.html
+++ b/src/app/components/iseeq-projektor/iseeq-projektor.component.html
@@ -1,10 +1,13 @@
 <div #projektorWindow class="projektor-window" draggable="false" ondragstart="return false;" 
-    (mousedown)="onMouseDown($event)" (mouseup)="onMouseUp()">
+    (mousedown)="onMouseDown($event)" (mouseup)="onMouseUp($event)" (touchstart)="onTouchStart($event)"
+    (touchmove)="onTouchMove($event)" (touchend)="onToucheEnd($event)">
+
     <div #aboutScrollable class="about-scrollable"draggable="false" ondragstart="return false;" (touchend)="onToucheEnd()">
         <div #frontWhiteSpace style="border:5px solid yellow;"></div>
         <ng-content></ng-content>
         <div #endWhiteSpace style="border:2px solid yellow;"></div>
     </div>
+
 </div>
 
 <div *ngIf="statusBar" class="status-bar" >
@@ -12,6 +15,6 @@
 </div>
 
 <div class="step-button">
-    <img src="/assets/pictures/ikon/github_card.svg" (click)="stepNavigationScroll(-1)" alt="stepp -"> 
-    <img src="/assets/pictures/ikon/github_card.svg" (click)="stepNavigationScroll(1)" alt="stepp +" >
+    <img class="rotate" src="/assets/pictures/ikon/arrow-full.svg" (click)="stepNavigationScroll(-1)" alt="stepp -" > 
+    <img src="/assets/pictures/ikon/arrow-full.svg" (click)="stepNavigationScroll(1)" alt="stepp +" >
 </div>
