--- a/src/app/ContetntFeature/components/iseeq-contact/iseeq-contact.component.html
+++ b/src/app/ContetntFeature/components/iseeq-contact/iseeq-contact.component.html
@@ -1,3 +1,33 @@
-<div class="site-base">
+<div class="site-base2">
     <h2 class="site-title">CONTACT</h2>
+
+    <div class=text-container >
+            <h3>IseeQ Kft.</h3>
+            <h3>1075 Budapest Madach Imre str. 13-14. Hungary</h3>
+            <h3>Email: <span class="mail">hello@iseeq.hu</span></h3>
+            <h3 class="text-end">HOW CAN WE HELP YOU?</h3>
+    </div>
+
+    <div class=button-container>
+        <app-iseeq-button class="button" text="Looking for job" size="l" textcolor="white" background="#45d48b" shadow="#319662"></app-iseeq-button>
+        <app-iseeq-button class="button" text="Working with us" size="l" textcolor="white" background="#45d48b" shadow="#319662"></app-iseeq-button>
+        <app-iseeq-button class="button" text="Join us" size="l" textcolor="white" background="#45d48b" shadow="#319662" width="270px"></app-iseeq-button>
+    </div>
+
+    <div class="form-container">
+
+    </div>
+
+    <div class="info-container">
+        <div class="info-item">
+
+        </div>
+        <div class="info-item">
+
+        </div>
+        <div class="info-item">
+            
+        </div>
+
+    </div>
 </div>
