--- a/src/app/ContetntFeature/components/iseeq-about/iseeq-about.component.css
+++ b/src/app/ContetntFeature/components/iseeq-about/iseeq-about.component.css
@@ -1,8 +1,27 @@
+.light-blue{
+    background: #b6d4eb;
+}
+.projektor-background{
+    position: relative;
+    background:url("/assets/pictures/about/skyline.png");
+    background-repeat: no-repeat;
+    background-position: bottom;
+}
+
+
 .projectable{
     height:400px;
     margin:20px;
     background-color:blue;
 }
-.in-center{}
+
     
 div{color:white}
+
+.flore{
+    position: relative;;
+    background:url("/assets/pictures/about/floor.png");
+    background-position: bottom;
+    background-repeat: no-repeat;
+    background-size: 100% 40px;
+}
