--- a/src/app/ContetntFeature/components/iseeq-about/iseeq-flag/iseeq-flag.component.html
+++ b/src/app/ContetntFeature/components/iseeq-about/iseeq-flag/iseeq-flag.component.html
@@ -1,6 +1,6 @@
-<div class="flag-container" [style.color]=" active ? 'white': '#337ab7' "alt="flag">
+<div #flagContainer class="flag-container" [style.color]=" active ? 'white': '#337ab7' "alt="flag">
   <div class="flag-img-cont">
-      <img class=flag [src]=visiblePicture [style.bottom]=" active ? '40px': '0px' "alt="flag">
+      <img class=flag [src]=visiblePicture [style.bottom]=" active ? '30px': '-5px' "alt="flag">
   </div>
 
   <div>
