--- a/src/app/ContetntFeature/components/iseeq-about/iseeq-about.component.html
+++ b/src/app/ContetntFeature/components/iseeq-about/iseeq-about.component.html
@@ -1,42 +1,17 @@
 <div class="site-base2">
     <h2 class="site-title">ABOUT</h2>
 
-<app-iseeq-projektor [membersCentered]=true [projektorWidth]="'99%'" [statusBar]=false [startInCenter]=true>
-   
-    <app-iseeq-flag  *ngFor="let flagData of flagDatas" (iamincenter)="elementInCenter(0)" [active]=flagData.active [texts]=flagData.texts [year]=flagData.year></app-iseeq-flag>   
-
-<!--
-<div iseeqProjektor  proWidth="250" (iamincenter)="elementInCenter(0)">0</div>
-<div iseeqProjektor  proWidth="250" (iamincenter)="elementInCenter(1)">1</div>
-<div iseeqProjektor  proWidth="250" (iamincenter)="elementInCenter(2)">2</div>
-<div iseeqProjektor  proWidth="250" (iamincenter)="elementInCenter(3)">3</div>
-<div iseeqProjektor  proWidth="250" (iamincenter)="elementInCenter(4)">4</div>
-<div iseeqProjektor  proWidth="250" (iamincenter)="elementInCenter(5)">5</div>
-<div iseeqProjektor  proWidth="250" (iamincenter)="elementInCenter(6)">6</div>
-<div iseeqProjektor  proWidth="250" (iamincenter)="elementInCenter(7)">7</div>
-<div iseeqProjektor  proWidth="250" (iamincenter)="elementInCenter(8)">8</div> -->
-
-</app-iseeq-projektor>
-
-
-
-<!--
-        <div iseeqProjektor  proWidth="250" (iamincenter)="elementInCenter(0)">0</div>
-        <div iseeqProjektor  proWidth="250" (iamincenter)="elementInCenter(1)">1</div>
-        <div iseeqProjektor  proWidth="250" (iamincenter)="elementInCenter(2)">2</div>
-        <div iseeqProjektor  proWidth="250" (iamincenter)="elementInCenter(3)">3</div>
-        <div iseeqProjektor  proWidth="250" (iamincenter)="elementInCenter(4)">4</div>
-        <div iseeqProjektor  proWidth="250" (iamincenter)="elementInCenter(5)">5</div>
-        <div iseeqProjektor  proWidth="250" (iamincenter)="elementInCenter(6)">6</div>
-        <div iseeqProjektor  proWidth="250" (iamincenter)="elementInCenter(7)">7</div>
-        <div iseeqProjektor  proWidth="250" (iamincenter)="elementInCenter(8)">8</div>
-         [startPosition]=5
--->
-
-
-
-
-
-
+    <div class="light-blue">
+        <div class=projektor-background>
+                       
+            <app-iseeq-projektor [membersCentered]=true [projektorWidth]="'99%'" [statusBar]=false [startInCenter]=true [startPosition]="2" buttonSource="/assets/pictures/ikon/arrow-full.svg">
+                <app-iseeq-projectable  *ngFor="let flagData of flagDatas; let x = index" (iamincenter)="elementInCenter(x)">
+                    <app-iseeq-flag [active]=flagData.active [texts]=flagData.texts [year]=flagData.year></app-iseeq-flag>
+                </app-iseeq-projectable>        
+            </app-iseeq-projektor>
+            
+            <div class="flore"><div>
+        <div>
+    <div>
 </div>
 
