--- a/src/app/ContetntFeature/components/iseeq-about/iseeq-flag/iseeq-flag.component.css
+++ b/src/app/ContetntFeature/components/iseeq-about/iseeq-flag/iseeq-flag.component.css
@@ -1,13 +1,16 @@
 .flag-container{
+    padding-top:60px;
     display:flex;
     width:350px;
-    border:1px solid black;
     margin:10px;
     height:400px;
-}
-
-.flag-img-cont{
-   border:2px solid pink;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none; 
+     -khtml-user-select: none; 
+       -moz-user-select: none; 
+        -ms-user-select: none; 
+            user-select: none; 
+                                 
 }
 
 h1{
@@ -20,6 +23,7 @@ ul{
     padding:0px;
     
 }
+
 li{display: flex}
 
 .list-decorator{
@@ -41,7 +45,6 @@ li{display: flex}
 
 .flag{
   position: relative;
-  border: 1px solid black;
   height:400px;
 }
 
