--- a/src/app/ContetntFeature/components/iseeq-clients/iseeq-clients.component.html
+++ b/src/app/ContetntFeature/components/iseeq-clients/iseeq-clients.component.html
@@ -1,43 +1,87 @@
 <div class="site-base2">
     <h2 class="site-title">CLIENTS</h2>
     <div class="client-container">
-        <app-iseeq-projektor [membersCentered]=true [projektorWidth]="'500px'" [statusBar]=true [startInCenter]=false [startPosition]="1" buttonSource="/assets/pictures/ikon/arrow-full_green.svg" >
+        <app-iseeq-projektor [membersCentered]=true [projektorWidth]=projectorWidth [statusBar]=true [startPosition]="1" buttonSource="/assets/pictures/ikon/arrow-full_green.svg" >
                 <app-iseeq-projectable>
-                    <div style="width:500px;height:550px;background:blue;margin:30px;">1111111111111111</div>
+                    <div class="clients-card">
+                            111111111111111111 1111111111111111111
+                        <div class="clients-logo">
+                
+                        </div>
+                
+                        <div class="clients-quote">
+                
+                        </div>
+                
+                        <div class="clients-data">
+                
+                            <div class="clients-data-picture">
+                
+                            </div>
+                
+                            <div class="clients-data-text">
+                
+                            </div>
+                            
+                        </div>
+                
+                    </div>
                 </app-iseeq-projectable>
 
                 <app-iseeq-projectable>
-                    <div style="width:500px;height:550px;background:blue;margin:30px;">2222222222</div> 
+                    <div class="clients-card">
+                            22222222222222222 222222222222222
+                        <div class="clients-logo">
+                
+                        </div>
+                
+                        <div class="clients-quote">
+                
+                        </div>
+                
+                        <div class="clients-data">
+                
+                            <div class="clients-data-picture">
+                
+                            </div>
+                
+                            <div class="clients-data-text">
+                
+                            </div>
+                            
+                        </div>
+                
+                    </div>
                 </app-iseeq-projectable>
 
                 <app-iseeq-projectable>
-                    <div style="width:500px;height:550px;background:blue;margin:30px;">333333333333333333333</div>
+                    <div class="clients-card">
+                        3333333333333333 33333333333333333
+                        <div class="clients-logo">
+                
+                        </div>
+                
+                        <div class="clients-quote">
+                
+                        </div>
+                
+                        <div class="clients-data">
+                
+                            <div class="clients-data-picture">
+                
+                            </div>
+                
+                            <div class="clients-data-text">
+                
+                            </div>
+                            
+                        </div>
+                
+                    </div>
                 </app-iseeq-projectable>
         </app-iseeq-projektor>
     </div>
 
-    <div class="clients-card">
-        
-        <div class="clients-logo">
-
-        </div>
-
-        <div class="clients-quote">
-
-        </div>
-
-        <div class="clients-data">
-
-            <div class="clients-data-picture">
-
-            </div>
-
-            <div class="clients-data-text">
-
-            </div>
-            
-        </div>
-
-    </div>
+    
 
 </div>
