--- a/src/app/ContetntFeature/components/iseeq-contact/iseeq-contact.component.html
+++ b/src/app/ContetntFeature/components/iseeq-contact/iseeq-contact.component.html
@@ -15,18 +15,18 @@
     </div>
 
     <div class="form-container">
-
+               form cont
     </div>
 
     <div class="info-container">
         <div class="info-item">
-
+                    inf item
         </div>
         <div class="info-item">
-
+            inf item
         </div>
         <div class="info-item">
-            
+            inf item
         </div>
 
     </div>
