--- a/src/app/ContetntFeature/components/iseeq-clients/iseeq-clients.component.css
+++ b/src/app/ContetntFeature/components/iseeq-clients/iseeq-clients.component.css
@@ -1,10 +1,25 @@
+.site-base2{
+    background-color:rgb(247, 247, 247);
+    padding-top:30px;
+    padding-bottom: 30px;
+}
 .client-container{
     position: relative;
     display:flex;
     justify-content: center;
 }
 .clients-card{
-
+    margin:10px;
+    width:550px;
+    min-height:550px;
+    background:white;
+    box-shadow:5px 5px 15px rgba(0,0,0,0.1);
+    -webkit-touch-callout: none;
+    -webkit-user-select: none; 
+    -khtml-user-select: none; 
+    -moz-user-select: none; 
+    -ms-user-select: none; 
+     user-select: none; 
 }
 .clients-logo{
 
@@ -20,4 +35,11 @@
 }
 .clients-data-text{
     
+}
+
+@media screen and (max-width: 600px) {
+    .clients-card{
+        width:300px;
+        margin:0px;
+    }
 }
