--- a/src/app/ContetntFeature/components/iseeq-team/iseeq-team.component.html
+++ b/src/app/ContetntFeature/components/iseeq-team/iseeq-team.component.html
@@ -1,4 +1,4 @@
-<div #siteBase class="site-base-team" (mouseleave)="onMouseLeave($event)">
+<div #siteBase class="site-base-team" (mouseleave)="onMouseLeave($event)" (mouseover)="onMouseOver($event)">
     <h1 class="site-title">TEAM</h1>
 
     <div class="card-container">
