--- a/src/app/ContetntFeature/components/iseeq-contact/iseeq-contact.component.css
+++ b/src/app/ContetntFeature/components/iseeq-contact/iseeq-contact.component.css
@@ -38,6 +38,31 @@
 
 .info-container{
     margin-top: 30px;
+    display: flex;
+}
+
+.card{
+    -webkit-touch-callout: none;
+    -webkit-user-select: none; 
+    -khtml-user-select: none; 
+    -moz-user-select: none; 
+    -ms-user-select: none; 
+    user-select: none; 
+    text-align: center;
+    padding-top: 100px;
+    box-sizing: border-box;
+    line-height: 300%;
+}
+a{
+    color:white;
+    font-weight: 700;
+    text-decoration: none;
+    font-size:22px;
+    font-family: "open_sans",Helvetica,Arial,sans-serif;
+}
+
+.medium-and-date{
+
 }
 
 @media only screen and (max-width: 1000px) {
