--- a/src/app/ContetntFeature/components/iseeq-contact/iseeq-contact.component.html
+++ b/src/app/ContetntFeature/components/iseeq-contact/iseeq-contact.component.html
@@ -19,12 +19,25 @@
     </div>
 
     <div class="info-container">
+
         <div class="info-item">
                     inf item
         </div>
+
         <div class="info-item">
-            inf item
+            <div style="border:2px solid red; background-color:lightgreen;">
+            <app-iseeq-projektor [projektorWidth]="'454px'" [statusBar]=true buttonSource="/assets/pictures/ikon/arrow-full_green.svg" 
+                                 [membersCentered]=true statusBarBackgroundColor="green" statusBarColor="white">
+                <app-iseeq-projectable>
+                    <div class="card"style="width:450px;height:350px;border:2px solid green">
+                        <a href="" alt="" target="_blank">Text</a><br>
+                        <span class="medium-and-date">date</span>
+                    </div>
+                </app-iseeq-projectable>
+            </app-iseeq-projektor>
+            </div>
         </div>
+
         <div class="info-item">
             inf item
         </div>
